[tool.poetry]
name = "pinaka"
version = "0.0.1"
description = "docs for pinaka API"
authors = ["externref <shiva02939@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
